# sbndaq-artdaq-core

./: CMakeLists.txt  CMakePresets.json
for-jenkins/: build-sbndaq_artdaq_core.sh  publishscisoft.sh
sbndaq-artdaq-core/: CMakeLists.txt
sbndaq-artdaq-core/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.cc.in  GetPackageBuildInfo.hh
sbndaq-artdaq-core/Overlays/: CMakeLists.txt  FragmentType.cc  FragmentType.hh
sbndaq-artdaq-core/Overlays/Common/: BernCRTFragment.cc  BernCRTFragment.hh  BernCRTFragmentSerial.cc  BernCRTFragmentSerial.hh  BernCRTFragmentV1.cc  BernCRTFragmentV1.hh  BernCRTFragmentV2.cc  BernCRTFragmentV2.hh  BernCRTTranslator.cc  BernCRTTranslator.hh  BernCRTZMQFragment.cc  BernCRTZMQFragment.hh  CAENV1730Fragment.cc  CAENV1730Fragment.hh  CAENV1730FragmentSerial.cc  CAENV1730FragmentSerial.hh  CAENV1740Fragment.cc  CAENV1740Fragment.hh  CMakeLists.txt  DummyFragment.cc  DummyFragment.hh  FragmentSerialBase.cc  FragmentSerialBase.hh  SpectratimeEventFragment.cc  SpectratimeEventFragment.hh  Utilities.cc  Utilities.hh  WhiteRabbitFragment.cc  WhiteRabbitFragment.hh  sbnToyFragment.cc  sbnToyFragment.hh
sbndaq-artdaq-core/Overlays/ICARUS/: CMakeLists.txt  ICARUSPMTGateFragment.cc  ICARUSPMTGateFragment.hh  ICARUSTriggerInfo.hh  ICARUSTriggerUDPFragment.cc  ICARUSTriggerUDPFragment.hh  ICARUSTriggerV2Fragment.cc  ICARUSTriggerV2Fragment.hh  ICARUSTriggerV3Fragment.cc  ICARUSTriggerV3Fragment.hh  PhysCrateFragment.cc  PhysCrateFragment.hh  PhysCrateStatFragment.cc  PhysCrateStatFragment.hh  common.h
sbndaq-artdaq-core/Overlays/SBND/: #PTB_content.cc#  BernCRTFragmentSerial.cc  BernCRTFragmentSerial.hh  BernCRTFragmentV2Serial.cc  BernCRTFragmentV2Serial.hh  CAENV1730FragmentSerial.cc  CAENV1730FragmentSerial.hh  CMakeLists.txt  CTBFragment.cc  CTBFragment.hh  CTB_content.cc  CTB_content.h  DAPHNEFragment.cc  DAPHNEFragment.hh  FragmentSerialBase.cc  NevisTBFragment.cc  NevisTBFragment.hh  NevisTB_dataFormat.cc  NevisTB_dataFormat.hh  NevisTPCFragment.cc  NevisTPCFragment.hh  PTBFragment.cc  PTBFragment.hh  PTB_content.cc  PTB_content.h  PennMicroSlice.cc  PennMicroSlice.hh  PennMicroSliceWriter.cc  PennMicroSliceWriter.hh  PennMilliSlice.cc  PennMilliSlice.hh  PennMilliSliceFragment.cc  PennMilliSliceFragment.hh  PennMilliSliceWriter.cc  PennMilliSliceWriter.hh  TDCTimestampFragment.cc  TDCTimestampFragment.hh  unitTest.cc
sbndaq-artdaq-core/Overlays/SBND/NevisTPC/: CMakeLists.txt  NevisTPCTypes.cc  NevisTPCTypes.hh  NevisTPCUtilities.cc  NevisTPCUtilities.hh
sbndaq-artdaq-core/Trace/: CMakeLists.txt  trace_defines.cc  trace_defines.h
ups/: product_deps
